test/files/neg/multiLineOps.check
multiLineOps.scala:6: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
    +3 // error: Expected a toplevel definition
    ^
1 warning
error: No warnings can be incurred under -Werror.
